--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,7 @@ p {
     margin: 0 0 25px;
     font-size: 16px;
     line-height: 1.7;
-    font-family: 'Roboto Slab', serif;
+    font-family: "Lato", sans-serif;
     font-weight: 300;
 }
 
@@ -644,7 +644,7 @@ a.fa.fa-angle-down:focus {
 #about #tl-dr h5 {
     font-weight: 300;
     font-size: 14px;
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Lato', sans-serif;
     text-transform: capitalize;
     letter-spacing: 0.5px;
 }
