--- a/css/styles.css
+++ b/css/styles.css
@@ -750,7 +750,7 @@ a.fa.fa-angle-down:focus {
 
 /* ======= SERVICES ======= */
 
-/*#services {
+services {
     padding-top: 100px;
     padding-bottom: 100px;
     background-color: #F0F0F0;
