--- a/css/styles.css
+++ b/css/styles.css
@@ -780,7 +780,7 @@ a.fa.fa-angle-down:focus {
     -moz-border-radius: 50%;
     -o-border-radius: 50%;
     border-radius: 50%;
-    display;
+    display:
     block;
     color: #FFF;
     font-size: 55px;
