--- a/css/styles.css
+++ b/css/styles.css
@@ -1136,13 +1136,13 @@ a.fa.fa-angle-down:focus {
 
 .skills-section .skill-icon {
     padding-bottom: 15px;
-    height: 120px;
+    height: auto;
 }
 
 @media screen and (max-width: 360px) {
     .skills-section .skill-icon {
         padding-bottom: 0;
-        height: 100px;
+        height: auto;
     }
 }
 
